--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
+button {
+    font-size: 20px;
+    background-color: #eee;
+    padding: 12px;
+    box-shadow: 0 1px 1px black;
+    margin: 10px;
+}
+
 .text-center {
     text-align: center;
 }
@@ -18,11 +26,11 @@
     box-shadow: 0px 3px 6px #ccc;
 }
 
-.turno {
+.turns {
     margin-top: 20px;
     margin-bottom: 20px;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .log ul {
@@ -33,62 +41,65 @@
 
 .log ul li {
     margin: 5px;
+    padding: 8px;
 }
 
-.log ul .player-turno {
-    color: rgba(8, 92, 160, 0.945);
-    background-color: #8b97da;
+.old-turn {
+    opacity: 0.5;
 }
 
-.log ul .monster-turno {
-    color: rgb(233, 20, 169);
-    background-color: #e697e9;
+.player-turn {
+    background-color: goldenrod;
+    text-align: left;
 }
 
-button {
-    font-size: 20px;
-    background-color: #eee;
-    padding: 12px;
-    box-shadow: 0 1px 1px black;
-    margin: 10px;
+.monster-turn {
+    background-color: rgb(0, 81, 128);
+    text-align: right;
+    color: white;
 }
 
-#empezar-partida {
+.btn-disabled {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+#start-game {
     background-color: #aaffb0;
 }
 
-#empezar-partida:hover {
+#start-game:hover {
     background-color: #76ff7e;
 }
 
-#atacar {
+#attack {
     background-color: #ff7367;
 }
 
-#atacar:hover {
+#attack:hover {
     background-color: #ff3f43;
 }
 
-#ataque-especial {
+#special-attack {
     background-color: #ffaf4f;
 }
 
-#ataque-especial:hover {
+#special-attack :hover {
     background-color: #ff9a2b;
 }
 
-#curar {
+#heal {
     background-color: #aaffb0;
 }
 
-#curar:hover {
+#heal:hover {
     background-color: #76ff7e;
 }
 
-#rendirse {
+#give-up {
     background-color: #ffffff;
 }
 
-#rendirse:hover {
+#give-up:hover {
     background-color: #c7c7c7;
 }
