--- a/css/app.css
+++ b/css/app.css
@@ -30,7 +30,7 @@ button {
     margin-top: 20px;
     margin-bottom: 20px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .log ul {
@@ -62,6 +62,13 @@ button {
 .btn-disabled {
     opacity: 0.5;
     pointer-events: none;
+}
+
+.end-log {
+    text-align: center;
+    background-color: crimson;
+    color: white;
+    font-size: 20px;
 }
 
 #start-game {
